code/microservices/k8s/account-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: tassiovale/euvoudoar-account
---
apiVersion: v1
kind: Service
metadata:
  name: account-srv
spec:
  selector:
    app: account
  ports:
    - name: account
      protocol: TCP
      port: 3000
      targetPort: 3000
