code/microservices/k8s/donations-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donations-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: donations
  template:
    metadata:
      labels:
        app: donations
    spec:
      containers:
        - name: donations
          image: tassiovale/euvoudoar-donations
---
apiVersion: v1
kind: Service
metadata:
  name: donations-srv
spec:
  selector:
    app: donations
  ports:
    - name: donations
      protocol: TCP
      port: 3000
      targetPort: 3000
