code/microservices/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: euvoudoar.com.br
      http:
        paths:
          - path: /api/account/?(.*)
            pathType: Prefix
            backend:
              service:
                name: account-service
                port:
                  number: 3000
